--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
-
+body{
+    background: #BFD7EA;
+    color:#0f1108;
+    font-family:'geneva';
+}
+h1{
+    font-family:'arial';
+    background: #031a6b;
+    color: #BFD7EA;
+    padding: 15px;
+    text-align: center;
+}
+h2{
+    font-family:'geneva';
+    font-size: larger;
+    text-align: center;
+}
+h3{
+    font-family:'verdana';
+    background: #cee3f5;
+    color:#031a6b;
+    padding: 10px;
+}
+p{
+    line-height: 2em;
+}
+img{
+    width: 400px;
+    height: 350px;
+    float: left;
+    margin-right: 15px;
+}
+a:link{
+    color:#004385;
+    font-style: italic;
+}
+a:visited{
+    color:#031a6b;
+}
