--- a/styles.css
+++ b/styles.css
@@ -64,18 +64,18 @@ a:visited{
     padding:2px;
     border-radius:3px;
 }
-@media (max-width: 4000px){
+@media (max-width: 3000px){
     #container{
         width:100%;
-        background:#cee3f5 !important;
+        align-content: center;
     }
 }
-@media (max-width: 900px){
+@media (max-width: 700px){
     #container{
         width:100%;
     }
     #container,p{
-        background:#cee3f5;
+        background:#cee3f5 !important;
         margin:0;
         padding:0;
         border:none;
