--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ body{
     background: #BFD7EA;
     color:#0f1108;
     font-family:'geneva';
+    margin:0;
+    padding:0;
+}
+#container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 5px;
 }
 h1{
     font-family:'arial';
@@ -9,25 +16,57 @@ h1{
     color: #BFD7EA;
     padding: 15px;
     text-align: center;
+    border-radius: 20px;
+    font-size: 2.5em;
+    letter-spacing: 3px;
+    opacity: 0;
+    animation: slideIn 1.5s ease forwards;
 }
 h2{
     font-family:'geneva';
-    font-size: larger;
     text-align: center;
+    font-size: 1.7em;
+    letter-spacing: 4.5px;
+    opacity: 0;
+    animation: slideIn 2s ease forwards 0.5s, glow 6s ease-in-out infinite alternate
 }
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes glow {
+    0% {
+        color: #031a6b;
+        text-shadow: 0 0 5px rgba(255,255,255,0.4)
+    }
+        100% {
+        color: #7ca3c5;
+        text-shadow: 0 0 10px rgba(255,255,255,0.6)
+
+    }
+    }
 h3{
     font-family:'verdana';
     background: #cee3f5;
     color:#031a6b;
     padding: 10px;
+    margin-top:30px;
+    font-size: 1.5em;
 }
 p{
     font-family:'geneva';
-    line-height: 2em;
+    line-height: 2.5em;
+    margin-bottom: 20px;
 }
 img{
-    width:250px;
-    height:250px;
+    width:265px;
+    height:265px;
     float: left;
     margin-right: 15px;
 }
@@ -39,11 +78,12 @@ img{
 }
 #sidebar{
     background: #004385;
-    width: 225px;
-    float:right;
+    width: 220px;
+    float: right;
     border: 2px solid white;
-    margin:10px;
-    line-height: 1em;
+    margin-left:10px;
+    font-size: 0.95em;
+    padding: 10px;
 }
 #sidebar h3{
     background: #031a6b;
@@ -52,6 +92,7 @@ img{
 }
 #sidebar li{
     color:#cee3f5;
+    line-height: 1.2em;
 }
 a:link{
     color:#a303ed;
@@ -67,28 +108,36 @@ a:visited{
     padding:4px;
     border-radius:3px;
 }
-@media (max-width: 1200px){
+@media (max-width: 1300px){
+    body{
+        background: #004385;
+    }
     #container{
-        width:900px;
-        background-color:#BFD7EA;
+        padding: 20px;
+        background: #cee3f5;
+        width:90%;
+    }
+    h3{
+        margin-top:10px;
     }
 }
-@media (max-width: 800px){
-    #container{
-        width:100%;
+@media (max-width: 1100px){
+    body{
+        background: #cee3f5;
     }
-    #container,p, body, h2{
-        background:#cee3f5 !important;
-        margin:0;
-        padding:0;
-        border:none;
+    #container{
+        width:95%;
+        padding:10px;
+    }
+    #container,p{
+        margin:10px;
     }
 }
 @media (max-width: 600px){
     #sidebar{
         display: none;
     }
-    #img,#spaceimg{
+    #img,#famimg{
         float:none;
         border:none;
         margin-left:0;
