--- a/styles.css
+++ b/styles.css
@@ -30,22 +30,22 @@ h2{
     opacity: 0;
     animation: slideIn 2s ease forwards 0.5s, glow 6s ease-in-out infinite alternate
 }
-@keyframes slideIn {
-  0% {
+@keyframes slideIn{
+  0%{
     opacity: 0;
     transform: translateY(20px);
   }
-  100% {
+  100%{
     opacity: 1;
     transform: translateY(0);
   }
 }
-@keyframes glow {
-    0% {
+@keyframes glow{
+    0%{
         color: #031a6b;
         text-shadow: 0 0 5px rgba(255,255,255,0.4)
     }
-        100% {
+    100%{
         color: #7ca3c5;
         text-shadow: 0 0 10px rgba(255,255,255,0.6)
 
@@ -82,7 +82,6 @@ img{
     float: right;
     border: 2px solid white;
     margin-left:10px;
-    font-size: 0.95em;
     padding: 10px;
 }
 #sidebar h3{
@@ -92,15 +91,23 @@ img{
 }
 #sidebar li{
     color:#cee3f5;
-    line-height: 1.2em;
+    line-height: 1.3em;
+    font-size: 0.95em;
 }
 a:link{
     color:#a303ed;
     font-style: italic;
+    text-decoration: none;
 }
 a:visited{
     color:#57007f;
     font-style:italic;
+}
+a:hover{
+    text-decoration: underline;
+}
+a:active{
+    color:#004385;
 }
 .highlight{
     background: white;
@@ -115,10 +122,11 @@ a:visited{
     #container{
         padding: 20px;
         background: #cee3f5;
-        width:90%;
+        width:1000px;
     }
     h3{
         margin-top:10px;
+        padding: 2px;
     }
 }
 @media (max-width: 1100px){
@@ -136,6 +144,10 @@ a:visited{
 @media (max-width: 600px){
     #sidebar{
         display: none;
+    }
+    #container{
+        width:93%;
+        padding: 10px;
     }
     #img,#famimg{
         float:none;
